.gitignore now includes data.csv

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ preliminary_analysis/
 GOOGLE_API_KEY.txt
 nohup.out
 data_without_gemini.csv
+data.csv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
