all generators working

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ driver.py
 *.tar.*
 API_KEY_GOOGLE.txt
 API_KEY_OPENAI.txt
+API_KEY_ANTHROPIC.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
