--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 description = ""
 authors = ["Harrison Stropkay <harrison.stropkay@jhuapl.edu>"]
 readme = "README.md"
-package-mode = false
+#package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10"
 scikit-learn = "^1.5.1"
 pandas = "^2.2.2"
 scipy = "^1.14.0"
@@ -15,7 +15,7 @@ seaborn = "^0.13.2"
 statsmodels = "^0.14.2"
 tqdm = "^4.66.4"
 nltk = "^3.8.1"
-
+numpy = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
